--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <section>
       <h2>Featured Builds</h2>
       <div class="gallery">
-        <img src="https://i.imgur.com/oKtTe4M.jpeg" alt="Guitar 1" />
-        <img src="https://i.imgur.com/0M1MZK3.jpeg" alt="Guitar 2" />
-        <img src="https://i.imgur.com/MlPcd4q.jpeg" alt="Guitar 3" />
+        <img src="https://via.placeholder.com/300x200?text=Guitar+1" alt="Guitar 1" />
+        <img src="https://via.placeholder.com/300x200?text=Guitar+2" alt="Guitar 2" />
+        <img src="https://via.placeholder.com/300x200?text=Guitar+3" alt="Guitar 3" />
       </div>
     </section>
   </main>
