--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Georgia', serif;
-      background: url('https://i.imgur.com/Z3K5g3Y.jpg') no-repeat center center fixed;
+      <body style="background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?auto=format&fit=crop&w=1600&q=80'); background-size: cover; background-position: center; background-repeat: no-repeat;">
       background-size: cover;
       color: #fff;
     }
