--- a/index.html
+++ b/index.html
@@ -3,58 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Philpott Guitars</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Georgia', serif;
-      <body style="background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?auto=format&fit=crop&w=1600&q=80'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      background-size: cover;
-      color: #fff;
-    }
-    header {
-      background-color: rgba(0,0,0,0.7);
-      padding: 2rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 3rem;
-      color: #f4d06f;
-    }
-    main {
-      padding: 2rem;
-      background-color: rgba(0,0,0,0.6);
-    }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-    }
-    .gallery img {
-      width: 300px;
-      height: auto;
-      border: 4px solid #f4d06f;
-      border-radius: 12px;
-      box-shadow: 0 0 10px #000;
-    }
-  </style>
+  <title>Philpottology</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <h1>Philpott Guitars</h1>
-    <p>Blues • Country • Rock — Hand-Tuned by a Human</p>
-  </header>
-  <main>
-    <section>
-      <h2>Featured Builds</h2>
-      <div class="gallery">
-        <img src="https://via.placeholder.com/300x200?text=Guitar+1" alt="Guitar 1" />
-        <img src="https://via.placeholder.com/300x200?text=Guitar+2" alt="Guitar 2" />
-        <img src="https://via.placeholder.com/300x200?text=Guitar+3" alt="Guitar 3" />
+<body class="bg-gray-950 text-gray-100 font-sans">
+  <!-- Hero Section -->
+  <section class="h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('your-guitar-amp-image.jpg');">
+    <div class="bg-black bg-opacity-70 p-8 rounded-xl">
+      <h1 class="text-5xl font-bold tracking-wide">Philpottology</h1>
+      <p class="mt-4 text-xl text-gray-300">Engineering solutions for code, business, and craftsmanship</p>
+      <a href="#about" class="mt-6 inline-block px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">Learn More</a>
+    </div>
+  </section>
+
+  <!-- Navigation -->
+  <nav class="bg-gray-900 text-gray-100 p-4 sticky top-0 z-50">
+    <ul class="flex space-x-6 justify-center">
+      <li><a href="#about" class="hover:text-indigo-400">About</a></li>
+      <li><a href="#services" class="hover:text-indigo-400">Services</a></li>
+      <li><a href="#portfolio" class="hover:text-indigo-400">Portfolio</a></li>
+      <li><a href="#resume" class="hover:text-indigo-400">Resume</a></li>
+      <li><a href="#contact" class="hover:text-indigo-400">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- About Section -->
+  <section id="about" class="py-20 px-6 max-w-4xl mx-auto">
+    <h2 class="text-3xl font-bold mb-4">About</h2>
+    <p class="text-lg text-gray-300">
+      I'm a seasoned consultant with deep roots in electric and gas utilities, a passion for creative problem-solving, and a hands-on mindset. Whether it's business analysis, custom-coded solutions, or hand-crafted instruments, I bring precision and grit to every project.
+    </p>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="bg-gray-800 py-20 px-6">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-3xl font-bold mb-8">Skills & Services</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div>
+          <h3 class="text-xl font-semibold mb-2">Business Consulting</h3>
+          <p class="text-gray-300">Data-driven strategies, project management, and operations expertise from years in the utility industry.</p>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold mb-2">Custom Coding</h3>
+          <p class="text-gray-300">Web tools, automation scripts, and logic systems tailored to client needs.</p>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold mb-2">Resume & Branding Help</h3>
+          <p class="text-gray-300">Professional resumes, personal branding, and digital presence consulting.</p>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold mb-2">Guitar Builds & Repair</h3>
+          <p class="text-gray-300">Custom luthiery and restoration work rooted in craftsmanship and tone.</p>
+        </div>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
+
+  <!-- Portfolio Section -->
+  <section id="portfolio" class="py-20 px-6 max-w-5xl mx-auto">
+    <h2 class="text-3xl font-bold mb-8">Portfolio</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+      <div class="bg-gray-900 p-6 rounded-xl">
+        <h3 class="text-xl font-semibold mb-2">Code Projects</h3>
+        <p class="text-gray-300">Explore tools, automations, and systems on <a href="https://github.com/PhilpottConsulting" class="text-indigo-400 underline">GitHub</a>.</p>
+      </div>
+      <div class="bg-gray-900 p-6 rounded-xl">
+        <h3 class="text-xl font-semibold mb-2">Guitar Work</h3>
+        <p class="text-gray-300">Gallery of custom guitars and repairs (coming soon).</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Resume Section -->
+  <section id="resume" class="bg-gray-800 py-20 px-6">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-4">Resume</h2>
+      <p class="text-gray-300 mb-6">See an example layout I can build for you — or download my resume below.</p>
+      <a href="resume.pdf" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 rounded-lg font-semibold text-white">Download Resume</a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-20 px-6 max-w-3xl mx-auto">
+    <h2 class="text-3xl font-bold mb-6">Contact</h2>
+    <form class="space-y-6">
+      <div>
+        <label class="block text-sm font-medium">Name</label>
+        <input type="text" class="w-full mt-1 p-3 bg-gray-900 border border-gray-700 rounded-md" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Email</label>
+        <input type="email" class="w-full mt-1 p-3 bg-gray-900 border border-gray-700 rounded-md" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Message</label>
+        <textarea rows="4" class="w-full mt-1 p-3 bg-gray-900 border border-gray-700 rounded-md"></textarea>
+      </div>
+      <button type="submit" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">Send</button>
+    </form>
+  </section>
+
+  <footer class="bg-gray-900 text-gray-400 text-center py-6 mt-20">
+    &copy; 2025 Philpottology. Built with grit and Tailwind.
+  </footer>
 </body>
 </html>
