--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-950 text-gray-100 font-sans">
   <!-- Hero Section -->
-  <section class="h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('philpottology-amp.jpg');">
+  <section class="h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('philpottology-amp.png');">
     <div class="bg-black bg-opacity-70 p-8 rounded-xl">
       <h1 class="text-5xl font-bold tracking-wide">Philpottology</h1>
       <p class="mt-4 text-xl text-gray-300">Engineering solutions for code, business, and craftsmanship</p>
