--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 <body class="bg-gray-950 text-gray-100 font-sans">
   <!-- Hero Section -->
-  <section class="h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('philpottology-amp.png');">
-    <div class="bg-black bg-opacity-70 p-8 rounded-xl">
-      <h1 class="text-5xl font-bold tracking-wide">Philpottology</h1>
-      <p class="mt-4 text-xl text-gray-300">Engineering solutions for code, business, and craftsmanship</p>
-      <a href="#about" class="mt-6 inline-block px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">Learn More</a>
-    </div>
-  </section>
+  <section class="relative h-screen bg-cover bg-center text-center" style="background-image: url('philpottology-amp.png');">
+  <!-- Adjustable overlay: try bg-opacity-10, 20, 70... or remove it entirely -->
+  <div class="absolute inset-0 bg-black bg-opacity-20"></div>
+  
+  <!-- Main content -->
+  <div class="relative z-10 flex flex-col items-center justify-center h-full p-8">
+    <h1 class="text-5xl font-bold tracking-wide text-white">Philpottology</h1>
+    <p class="mt-4 text-xl text-gray-300">Engineering solutions for code, business, and craftsmanship</p>
+    <a href="#about" class="mt-6 inline-block px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">Learn More</a>
+  </div>
+</section>
+
 
   <!-- Navigation -->
   <nav class="bg-gray-900 text-gray-100 p-4 sticky top-0 z-50">
