--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Hero Section -->
   <section class="relative h-screen bg-cover bg-center text-center" style="background-image: url('philpottology-amp.png');">
   <!-- Adjustable overlay: try bg-opacity-10, 20, 70... or remove it entirely -->
-  <div class="absolute inset-0 bg-black bg-opacity-10"></div>
+  <div class="absolute inset-0 backdrop-blur-sm bg-black bg-opacity-10"></div>
   
   <!-- Main content -->
   <div class="relative z-10 flex flex-col items-center justify-center h-full p-8">
