--- a/index.html
+++ b/index.html
@@ -1,116 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Philpottology</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Philpottology - Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-950 text-gray-100 font-sans">
-  <!-- Hero Section -->
-  <section class="relative h-screen bg-cover bg-center text-center" style="background-image: url('philpottology-amp.png');">
-  <!-- Adjustable overlay: try bg-opacity-10, 20, 70... or remove it entirely -->
-  <div class="absolute inset-0 bg-black bg-opacity-20"></div>
-  
-  <!-- Main content -->
-  <div class="relative z-10 flex flex-col items-center justify-center h-full p-8">
-    <h1 class="text-5xl font-bold tracking-wide text-white">Philpottology</h1>
-    <p class="mt-4 text-xl text-gray-300">Engineering solutions for code, business, and craftsmanship</p>
-    <a href="#about" class="mt-6 inline-block px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">Learn More</a>
-  </div>
-</section>
-
 
   <!-- Navigation -->
-  <nav class="bg-gray-900 text-gray-100 p-4 sticky top-0 z-50">
-    <ul class="flex space-x-6 justify-center">
-      <li><a href="#about" class="hover:text-indigo-400">About</a></li>
-      <li><a href="#services" class="hover:text-indigo-400">Services</a></li>
-      <li><a href="#portfolio" class="hover:text-indigo-400">Portfolio</a></li>
-      <li><a href="#resume" class="hover:text-indigo-400">Resume</a></li>
-      <li><a href="#contact" class="hover:text-indigo-400">Contact</a></li>
+  <nav class="bg-gray-900 text-gray-100 p-4 sticky top-0 z-50 shadow">
+    <ul class="flex space-x-6 max-w-6xl mx-auto justify-center">
+      <li><a href="index.html" class="hover:text-indigo-400 font-semibold">Home</a></li>
+      <li><a href="guitars.html" class="hover:text-indigo-400 font-semibold">Guitar Builds</a></li>
+      <li><a href="resume.html" class="hover:text-indigo-400 font-semibold">Resume</a></li>
     </ul>
   </nav>
 
+  <!-- Hero Section -->
+  <section class="relative h-screen bg-cover bg-center text-center" style="background-image: url('images/philpottology-amp.png');">
+    <div class="absolute inset-0 bg-black bg-opacity-20"></div>
+    <div class="relative z-10 flex flex-col items-center justify-center h-full p-8">
+      <h1 class="text-5xl font-bold tracking-wide text-white">Philpottology</h1>
+      <p class="mt-4 text-xl text-gray-300 max-w-xl">Engineering solutions for code, business, and craftsmanship</p>
+      <a href="#coding-projects" class="mt-6 inline-block px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">See Coding Projects</a>
+    </div>
+  </section>
+
   <!-- About Section -->
-  <section id="about" class="py-20 px-6 max-w-4xl mx-auto">
-    <h2 class="text-3xl font-bold mb-4">About</h2>
-    <p class="text-lg text-gray-300">
-      I'm a seasoned consultant with deep roots in electric and gas utilities, a passion for creative problem-solving, and a hands-on mindset. Whether it's business analysis, custom-coded solutions, or hand-crafted instruments, I bring precision and grit to every project.
+  <section id="about" class="py-16 px-6 max-w-4xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-6">About</h2>
+    <p class="text-lg text-gray-300 leading-relaxed">
+      I'm a seasoned consultant with deep roots in electric and gas utilities, a passion for creative problem-solving, and a hands-on mindset. Whether it’s business analysis, custom-coded solutions, or hand-crafted instruments, I bring precision and grit to every project.
     </p>
   </section>
 
-  <!-- Services Section -->
-  <section id="services" class="bg-gray-800 py-20 px-6">
-    <div class="max-w-4xl mx-auto">
-      <h2 class="text-3xl font-bold mb-8">Skills & Services</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div>
-          <h3 class="text-xl font-semibold mb-2">Business Consulting</h3>
-          <p class="text-gray-300">Data-driven strategies, project management, and operations expertise from years in the utility industry.</p>
-        </div>
-        <div>
-          <h3 class="text-xl font-semibold mb-2">Custom Coding</h3>
-          <p class="text-gray-300">Web tools, automation scripts, and logic systems tailored to client needs.</p>
-        </div>
-        <div>
-          <h3 class="text-xl font-semibold mb-2">Resume & Branding Help</h3>
-          <p class="text-gray-300">Professional resumes, personal branding, and digital presence consulting.</p>
-        </div>
-        <div>
-          <h3 class="text-xl font-semibold mb-2">Guitar Builds & Repair</h3>
-          <p class="text-gray-300">Custom luthiery and restoration work rooted in craftsmanship and tone.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Portfolio Section -->
-  <section id="portfolio" class="py-20 px-6 max-w-5xl mx-auto">
-    <h2 class="text-3xl font-bold mb-8">Portfolio</h2>
+  <!-- Coding Projects Section -->
+  <section id="coding-projects" class="bg-gray-800 py-16 px-6 max-w-6xl mx-auto">
+    <h2 class="text-3xl font-bold mb-8 text-center">Coding Projects</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-      <div class="bg-gray-900 p-6 rounded-xl">
-        <h3 class="text-xl font-semibold mb-2">Code Projects</h3>
-        <p class="text-gray-300">Explore tools, automations, and systems on <a href="https://github.com/PhilpottConsulting" class="text-indigo-400 underline">GitHub</a>.</p>
+      <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-2">Inventory Management System</h3>
+        <p class="text-gray-300 mb-4">
+          Designed a robust system to track and sort inventory cases, improving operational visibility and efficiency in utility environments.
+        </p>
+        <a href="https://github.com/PhilpottConsulting/inventory-management" target="_blank" class="text-indigo-400 underline">View on GitHub</a>
       </div>
-      <div class="bg-gray-900 p-6 rounded-xl">
-        <h3 class="text-xl font-semibold mb-2">Guitar Work</h3>
-        <p class="text-gray-300">Gallery of custom guitars and repairs (coming soon).</p>
+      <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-2">Custom Automation Scripts</h3>
+        <p class="text-gray-300 mb-4">
+          Developed scripts to automate routine tasks and data analysis, boosting productivity for small businesses and consulting clients.
+        </p>
+        <a href="https://github.com/PhilpottConsulting/custom-scripts" target="_blank" class="text-indigo-400 underline">View on GitHub</a>
       </div>
     </div>
   </section>
 
-  <!-- Resume Section -->
-  <section id="resume" class="bg-gray-800 py-20 px-6">
-    <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-4">Resume</h2>
-      <p class="text-gray-300 mb-6">See an example layout I can build for you — or download my resume below.</p>
-      <a href="resume.pdf" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 rounded-lg font-semibold text-white">Download Resume</a>
-    </div>
+  <!-- Guitar Preview Section -->
+  <section id="guitar-preview" class="py-16 px-6 max-w-4xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-6">Guitar Builds Preview</h2>
+    <a href="guitars.html" class="inline-block hover:opacity-80 transition-opacity duration-300">
+      <img src="images/telecaster-blue-front.jpg" alt="Blue Telecaster Front" class="mx-auto rounded-xl shadow-lg max-w-md" />
+      <p class="mt-3 text-indigo-400 underline font-semibold">Explore Guitar Builds</p>
+    </a>
+    <p class="mt-4 text-gray-300 max-w-md mx-auto">
+      Built with my son — black hardware, bold blue finish. Headstock is a work in progress with plans for a unique “machete” style.
+    </p>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-20 px-6 max-w-3xl mx-auto">
-    <h2 class="text-3xl font-bold mb-6">Contact</h2>
-    <form class="space-y-6">
-      <div>
-        <label class="block text-sm font-medium">Name</label>
-        <input type="text" class="w-full mt-1 p-3 bg-gray-900 border border-gray-700 rounded-md" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium">Email</label>
-        <input type="email" class="w-full mt-1 p-3 bg-gray-900 border border-gray-700 rounded-md" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium">Message</label>
-        <textarea rows="4" class="w-full mt-1 p-3 bg-gray-900 border border-gray-700 rounded-md"></textarea>
-      </div>
-      <button type="submit" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-semibold">Send</button>
+  <!-- Contact & Resume Teaser Section -->
+  <section id="contact" class="bg-gray-800 py-16 px-6 max-w-4xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-6">Contact & Resume</h2>
+    <p class="text-gray-300 mb-6 max-w-lg mx-auto">
+      Interested in consulting or coding work? Feel free to reach out or <a href="resume.html" class="text-indigo-400 underline">check out my resume</a>.
+    </p>
+    <form class="space-y-6 max-w-md mx-auto" action="mailto:your-email@example.com" method="POST" enctype="text/plain" >
+      <input type="text" name="Name" placeholder="Your Name" required class="w-full p-3 bg-gray-900 border border-gray-700 rounded-md text-gray-100" />
+      <input type="email" name="Email" placeholder="Your Email" required class="w-full p-3 bg-gray-900 border border-gray-700 rounded-md text-gray-100" />
+      <textarea name="Message" rows="4" placeholder="Your Message" required class="w-full p-3 bg-gray-900 border border-gray-700 rounded-md text-gray-100"></textarea>
+      <button type="submit" class="w-full px-6 py-3 bg-indigo-600 hover:bg-indigo-700 rounded-lg font-semibold text-white">Send</button>
     </form>
   </section>
 
   <footer class="bg-gray-900 text-gray-400 text-center py-6 mt-20">
     &copy; 2025 Philpottology. Built with grit and Tailwind.
   </footer>
+  
 </body>
 </html>
+
